Fixed z-index bug.

--- a/scss/password-generator.scss
+++ b/scss/password-generator.scss
@@ -6,6 +6,9 @@
 }
 
 .password-generator {
+    position: relative;
+    z-index: 1;
+
     .table {
         display: table;
 
@@ -53,6 +56,7 @@
 
                         &:before {
                             border: 1px solid gray;
+                            border-radius: .25em;
                             color: #ccc;
                             content: '\2714';
                             display: inline-block;
